unpackaged/main/default/objects/Knowledge__kav/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hive Team</fullName>
            </value>
            <value>
                <fullName>Hive Users: Standard User Profile</fullName>
            </value>
            <value>
                <fullName>Hive Users: NA</fullName>
            </value>
            <value>
                <fullName>Hive Users: AU</fullName>
            </value>
            <value>
                <fullName>Hive Users: Advertisements</fullName>
            </value>
            <value>
                <fullName>Hive Users: GCX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>