unpackaged/main/default/objects/Knowledge__kav/fields/Guidance__c.field-meta.xml
<CustomField>
    <fullName>Guidance__c</fullName>
    <description>This is the body of the article</description>
    <label>Guidance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>