unpackaged/main/default/objects/Knowledge__kav/fields/Hive_Product__c.field-meta.xml
<CustomField>
    <fullName>Hive_Product__c</fullName>
    <description>US-0010711 To categorize our articles depending on Hive Product</description>
    <label>Hive Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Area</valueSetName>
    </valueSet>
</CustomField>