unpackaged/main/default/objects/Knowledge__kav/fields/Hive_Uni_Badge__c.field-meta.xml
<CustomField>
    <fullName>Hive_Uni_Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hive Uni Badge</label>
    <referenceTo>WorkBadgeDefinition</referenceTo>
    <relationshipLabel>Knowledge Articles</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>