unpackaged/main/default/objects/Knowledge__kav/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0010711</description>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>