unpackaged/main/default/objects/Knowledge__kav/fields/Regional_Availability__c.field-meta.xml
<CustomField>
    <fullName>Regional_Availability__c</fullName>
    <description>US-0010711</description>
    <label>Regional Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Site</valueSetName>
    </valueSet>
</CustomField>