unpackaged/main/default/objects/Knowledge__kav/fields/Related_Articles__c.field-meta.xml
<CustomField>
    <fullName>Related_Articles__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Articles</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>FAQs</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>