unpackaged/main/default/objects/Knowledge__kav/fields/The_Issue__c.field-meta.xml
<CustomField>
    <fullName>The_Issue__c</fullName>
    <label>The Issue</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>