unpackaged/main/default/objects/Knowledge__kav/recordTypes/Regular_Request.recordType-meta.xml
<RecordType>
    <fullName>Regular_Request</fullName>
    <active>true</active>
    <description>This is used as guidance for regular support requests</description>
    <label>Regular Request</label>
</RecordType>